Fixed padding so menu is closer to a square on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -471,7 +471,7 @@ footer {
 		right: 20px;
 		top: 5px;
 		font-size: 1.5em;
-		padding: 0 6px;
+		padding: 0 4px;
 	}
 
 	.logo {
